# Academic-Projects

./: README.md
Critical Computing Systems Engineering (MSc)/: README.md
Critical Computing Systems Engineering (MSc)/APROP/: README.md
Critical Computing Systems Engineering (MSc)/APROP/Aulas PL/: .gitignore  README.md
Critical Computing Systems Engineering (MSc)/APROP/Aulas PL/PL1/: README.md  makefile
Critical Computing Systems Engineering (MSc)/APROP/Aulas PL/PL2/: makefile
Critical Computing Systems Engineering (MSc)/APROP/Aulas PL/PL3/: README.md  makefile  plot_results_llvm.py  results_gcc.csv  results_gcc_n_10000_alex.csv  results_llvm.csv
Critical Computing Systems Engineering (MSc)/APROP/Aulas PL/examples/: default.c  fibonacci.c  invert.c  reduction.c  sections.c
Critical Computing Systems Engineering (MSc)/IACOS/: README.md
Critical Computing Systems Engineering (MSc)/IACOS/project_iacos/: CMakeLists.txt  READ_INDICATIONS.txt  package.xml  setup.cfg  setup.py
Critical Computing Systems Engineering (MSc)/IACOS/project_iacos/launch/: gazebo.launch.py  spawn_vehicle.launch.py
Critical Computing Systems Engineering (MSc)/IACOS/project_iacos/prius_description/: CMakeLists.txt  model.config  package.xml
Critical Computing Systems Engineering (MSc)/IACOS/project_iacos/prius_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Critical Computing Systems Engineering (MSc)/IACOS/project_iacos/prius_description/install/prius_description/share/prius_description/: local_setup.sh  package.bash  package.sh
Critical Computing Systems Engineering (MSc)/IACOS/project_iacos/prius_description/log/: latest_build
Critical Computing Systems Engineering (MSc)/IACOS/project_iacos/prius_description/urdf/: prius.urdf
Critical Computing Systems Engineering (MSc)/IACOS/project_iacos/project_iacos/: sign_detector.py  vehicle_controller.py
Critical Computing Systems Engineering (MSc)/IACOS/project_iacos/worlds/: gazebo.world
Critical Computing Systems Engineering (MSc)/THESIS/teseHT/: MaskCreation_from_screenshot.cpp  requirements.txt  viewsegformervideo.py
(+66 files in other folders)
